tests/baselines/reference/parserIndexMemberDeclaration8.errors.txt
parserIndexMemberDeclaration8.ts(2,4): error TS1071: 'private' modifier cannot appear on an index signature.


==== parserIndexMemberDeclaration8.ts (1 errors) ====
    class C {
       private [x: string]: string;
       ~~~~~~~
!!! error TS1071: 'private' modifier cannot appear on an index signature.
    }